# Chess

./: CMakeLists.txt
.github/workflows/: cmake-test.yml  cmake-unittest.yml
inc/: board.hpp  piece.hpp
src/: board.cpp  main.cpp  piece.cpp
test/: CMakeLists.txt  test_board.cpp  test_piece.cpp
